RESOLVED FIXED38610
[chromium] clear out deprecated methods that are no longer used by chromium
https://bugs.webkit.org/show_bug.cgi?id=38610
Summary [chromium] clear out deprecated methods that are no longer used by chromium
Darin Fisher (:fishd, Google)
Reported 2010-05-05 14:44:20 PDT
[chromium] clear out deprecated methods that are no longer used by chromium
Attachments
v1 patch (11.97 KB, patch)
2010-05-05 14:47 PDT, Darin Fisher (:fishd, Google)
dglazkov: review+
Darin Fisher (:fishd, Google)
Comment 1 2010-05-05 14:47:18 PDT
Created attachment 55156 [details] v1 patch
Dimitri Glazkov (Google)
Comment 2 2010-05-05 14:50:23 PDT
Comment on attachment 55156 [details] v1 patch yay!
Darin Fisher (:fishd, Google)
Comment 3 2010-05-06 15:54:24 PDT
Note You need to log in before you can comment on or make changes to this bug.