2010-05-05  Darin Fisher  <darin@chromium.org>

Reviewed by Dimitri Glazkov.

        [chromium] clear out deprecated methods that are no longer used
        https://bugs.webkit.org/show_bug.cgi?id=38610

        * public/WebFormElement.h:
        * public/WebInputElement.h:
        * public/WebKitClient.h:
        * public/WebView.h:
        * public/WebViewClient.h:
        (WebKit::WebViewClient::createPopupMenu):
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::popupOpened):
        * src/WebFormElement.cpp:
        * src/WebInputElement.cpp:
        (WebKit::WebInputElement::setSelectionRange):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::hideSuggestionsPopup):
        * src/WebViewImpl.h:



Canonical link: https://commits.webkit.org/50088@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58839 268f45cc-cd09-0410-ab3c-d52691b4dbfc