WebKit/chromium/public/WebKitClient.h
@@ -89,10 +89,6 @@ public:
     // Return a LocalStorage namespace that corresponds to the following path.
     virtual WebStorageNamespace* createLocalStorageNamespace(const WebString& path, unsigned quota) { return 0; }
 
-    // Return a new SessionStorage namespace.
-    // THIS IS DEPRECATED.  WebViewClient::getSessionStorageNamespace() is the new way to access this.
-    virtual WebStorageNamespace* createSessionStorageNamespace() { return 0; }
-
     // Called when storage events fire.
     virtual void dispatchStorageEvent(const WebString& key, const WebString& oldValue,
                                       const WebString& newValue, const WebString& origin,
@@ -267,7 +263,6 @@ public:
     virtual void stopSharedTimer() { }
 
     // Callable from a background WebKit thread.
-    virtual void callOnMainThread(void (*func)()) { } // DEPRECATED
     virtual void callOnMainThread(void (*func)(void*), void* context) { }
 
     // WebGL --------------------------------------------------------------
