WebKit/chromium/public/WebViewClient.h
@@ -79,10 +79,6 @@ public:
     // responsible for rendering the contents of the popup menu.
     virtual WebWidget* createPopupMenu(WebPopupType) { return 0; }
     virtual WebWidget* createPopupMenu(const WebPopupMenuInfo&) { return 0; }
-    // Deprecated methods.
-    virtual WebWidget* createPopupMenu() { return 0; }
-    virtual WebWidget* createPopupMenu(bool activatable) { return 0; }
-
 
     // Create a session storage namespace object associated with this WebView.
     virtual WebStorageNamespace* createSessionStorageNamespace() { return 0; }
