WebKit/chromium/src/ChromeClientImpl.cpp
@@ -623,13 +623,6 @@ void ChromeClientImpl::popupOpened(PopupContainer* popupContainer,
     } else {
         webwidget = m_webView->client()->createPopupMenu(
             convertPopupType(popupContainer->popupType()));
-        // Try the deprecated methods.
-        // FIXME: Remove the deprecated methods once the Chromium side use the
-        //        new method.
-        if (!webwidget)
-            webwidget = m_webView->client()->createPopupMenu();
-        if (!webwidget)
-            webwidget = m_webView->client()->createPopupMenu(false);
         // We only notify when the WebView has to handle the popup, as when
         // the popup is handled externally, the fact that a popup is showing is
         // transparent to the WebView.
