WebKit/chromium/src/WebViewImpl.h
@@ -157,10 +157,6 @@ public:
     virtual WebDevToolsAgent* devToolsAgent();
     virtual void setDevToolsAgent(WebDevToolsAgent*);
     virtual WebAccessibilityObject accessibilityObject();
-    virtual void applyAutofillSuggestions(
-        const WebNode&,
-        const WebVector<WebString>& suggestions,
-        int defaultSuggestionIndex);
     virtual void applyAutoFillSuggestions(
         const WebNode&,
         const WebVector<WebString>& names,
@@ -171,8 +167,6 @@ public:
         const WebVector<WebString>& suggestions,
         int defaultSuggestionIndex);
     virtual void hidePopups();
-    virtual void hideAutofillPopup();
-    virtual void hideSuggestionsPopup();
     virtual void setScrollbarColors(unsigned inactiveColor,
                                     unsigned activeColor,
                                     unsigned trackColor);
@@ -301,6 +295,8 @@ public:
     void popupOpened(WebCore::PopupContainer* popupContainer);
     void popupClosed(WebCore::PopupContainer* popupContainer);
 
+    void hideSuggestionsPopup();
+
     // HACK: currentInputEvent() is for ChromeClientImpl::show(), until we can
     // fix WebKit to pass enough information up into ChromeClient::show() so we
     // can decide if the window.open event was caused by a middle-mouse click
@@ -345,7 +341,6 @@ private:
     // Returns true if the view was scrolled.
     bool scrollViewWithKeyboard(int keyCode, int modifiers);
 
-    // Hides the select popup if one is opened.
     void hideSelectPopup();
 
     // Converts |pos| from window coordinates to contents coordinates and gets
